objects/Personal_Goal_Measurement_Period__c.object
<CustomObject>
    <fields>
        <fullName>Counter_Id__c</fullName>
        <displayFormat>PGMP-{0}</displayFormat>
        <label>Counter Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Measurement_Date__c</fullName>
        <label>Measurement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Goal__c</fullName>
        <label>Personal Goal</label>
        <referenceTo>Personal_Goal__c</referenceTo>
        <relationshipLabel>Personal Goal Measurement Periods</relationshipLabel>
        <relationshipName>Personal_Goal_Measurement_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Personal Goal Measurement Period</label>
    <nameField>
        <label>Personal Goal Measurement Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Goal Measurement Periods</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>